--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,24 +10,22 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  outline: 3px solid blue;
 }
 
-/* #search-box {
-  font: inherit;
-  padding: 8px;
-  max-width: 320px;
-  margin-bottom: 16px;
+* {
+  box-sizing: border-box;
 }
 
-ul {
-  list-style: none;
-
+.gallery {
   display: flex;
-  flex-direction: column;
+  gap: 15px;
 }
 
-li {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-} */
+.photo-card {
+  max-width: (vw / 4);
+}
+
+.search-form {
+  outline: 15px solid greenyellow;
+}
