--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,11 +10,15 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
-  outline: 3px solid blue;
 }
 
-* {
-  box-sizing: border-box;
+img {
+  display: block;
 }
 
-
+.gallery {
+  display: flex;
+}
+.info {
+  margin: 10px;
+}
