--- a/src/css/common.css
+++ b/src/css/common.css
@@ -7,11 +7,41 @@ body {
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
+  background-color: snow;
   color: #212121;
   line-height: 1.5;
 }
 
-.search-form {
-  outline: 2 px solid black;
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.is-hidden {
+  display: none;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 5px;
+
+  padding: 10px;
+}
+
+.gallery__item {
+  max-width: calc((100% - 20px) / 3);
+  border: 1px solid grey;
+  border-radius: 4px;
+  padding: 5px;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+button {
+  background-color: white;
 }
