--- a/src/css/common.css
+++ b/src/css/common.css
@@ -34,7 +34,7 @@ p {
   padding: 10px;
 }
 
-.gallery__item {
+.photo-card {
   max-width: calc((100% - 20px) / 3);
   border: 1px solid grey;
   border-radius: 4px;
@@ -58,4 +58,3 @@ button:hover {
   margin-top: 0;
   margin-bottom: 10px;
 }
-
