--- a/src/css/common.css
+++ b/src/css/common.css
@@ -42,6 +42,8 @@ p {
   border: 1px solid grey;
   border-radius: 4px;
   padding: 5px;
+
+  background-color: beige;
 }
 
 img {
@@ -50,11 +52,22 @@ img {
 }
 
 button {
-  background-color: white;
+  color: blue;
+  background-color: rgb(247, 247, 202);
+  border: 1px solid black;
+  border-radius: 4px;
 }
 
 button:hover {
-  background-color: aquamarine;
+  background-color: rgb(193, 241, 225);
+}
+
+.load-more {
+  position: absolute;
+  left: 50%;
+
+  min-width: 100px;
+  min-height: 30px;
 }
 
 .info-item:not(:last-child) {
